@@ -25,6 +25,7 @@ package org.gjt.sp.jedit.browser;
 //{{{ Imports
 import javax.swing.tree.DefaultMutableTreeNode;
 import java.io.*;
+import java.util.ArrayList;
 import org.gjt.sp.jedit.io.*;
 import org.gjt.sp.jedit.jEdit;
 import org.gjt.sp.jedit.MiscUtilities;
@@ -153,6 +154,8 @@ class BrowserIORequest extends WorkRequest
 	private void listDirectory()
 	{
 		VFS.DirectoryEntry[] directory = null;
+		VFS.DirectoryEntry[] parents = null;
+
 		String[] args = { path1 };
 		setStatus(jEdit.getProperty("vfs.status.listing-directory",args));
 
@@ -164,6 +167,35 @@ class BrowserIORequest extends WorkRequest
 
 			canonPath = vfs._canonPath(session,path1,browser);
 			directory = vfs._listDirectory(session,canonPath,browser);
+
+			if(loadingRoot)
+			{
+				ArrayList parentList = new ArrayList();
+
+				String parent = path1;
+
+				if(parent.length() != 1 && (parent.endsWith("/")
+					|| parent.endsWith(File.separator)))
+					parent = parent.substring(0,parent.length() - 1);
+
+				for(;;)
+				{
+					parentList.add(0,vfs._getDirectoryEntry(
+						session,parent,browser));
+					String newParent = vfs.getParentOfPath(parent);
+					if(newParent.length() != 1 && (newParent.endsWith("/")
+						|| newParent.endsWith(File.separator)))
+						newParent = newParent.substring(0,newParent.length() - 1);
+
+					if(newParent == null || parent.equals(newParent))
+						break;
+					else
+						parent = newParent;
+				}
+
+				parents = (VFS.DirectoryEntry[])parentList.toArray(
+					new VFS.DirectoryEntry[parentList.size()]);
+			}
 		}
 		catch(IOException io)
 		{
@@ -189,7 +221,9 @@ class BrowserIORequest extends WorkRequest
 		}
 
 		setAbortable(false);
-		browser.directoryLoaded(node,loadingRoot,canonPath,directory);
+
+		browser.directoryLoaded(node,loadingRoot,canonPath,
+			parents,directory);
 	} //}}}
 
 	//{{{ delete() method
